test/scc/ext/tm/semantic-errors/009.a
009.t:8:9: error: volatile objects cannot be used within _Transaction_safe function